add compile time flag for using t4 and pt4, update t4 cuts

--- a/RecoTracker/LSTCore/standalone/Makefile
+++ b/RecoTracker/LSTCore/standalone/Makefile
@@ -46,20 +46,20 @@ cutvalue_primitive: rooutil efficiency $(EXES)
 
 bin/lst_cpu: LSTLIB=-llst_cpu
 bin/lst_cpu: bin/lst_cpu.o $(OBJECTS_CPU)
-	$(CXX) $(LDFLAGS) $(EXTRAFLAGS) $(INCLUDEFLAGS) $(ALPAKAFLAGS) $^ $(ROOTLIBS) $(CUTVALUEFLAG) $(PRIMITIVEFLAG) $(DOQUINTUPLET) $(ALPAKA_CPU) -o $@
+	$(CXX) $(LDFLAGS) $(EXTRAFLAGS) $(INCLUDEFLAGS) $(ALPAKAFLAGS) $^ $(ROOTLIBS) $(CUTVALUEFLAG) $(PRIMITIVEFLAG) $(DOQUINTUPLET) $(T4FLAG) $(PT4FLAG) $(ALPAKA_CPU) -o $@
 bin/lst_cuda: LSTLIB=-llst_cuda
 bin/lst_cuda: bin/lst_cuda.o $(OBJECTS_CUDA)
-	$(CXX) $(LDFLAGS) $(EXTRAFLAGS) $(INCLUDEFLAGS) $(ALPAKAFLAGS) $^ $(ROOTLIBS) $(CUTVALUEFLAG) $(PRIMITIVEFLAG) $(DOQUINTUPLET) $(ALPAKA_CUDA) $(LDFLAGS_CUDA) -o $@
+	$(CXX) $(LDFLAGS) $(EXTRAFLAGS) $(INCLUDEFLAGS) $(ALPAKAFLAGS) $^ $(ROOTLIBS) $(CUTVALUEFLAG) $(PRIMITIVEFLAG) $(DOQUINTUPLET) $(T4FLAG) $(PT4FLAG) $(ALPAKA_CUDA) $(LDFLAGS_CUDA) -o $@
 bin/lst_rocm: LSTLIB=-llst_rocm
 bin/lst_rocm: bin/lst_rocm.o $(OBJECTS_ROCM)
-	$(CXX) $(LDFLAGS) $(EXTRAFLAGS) $(INCLUDEFLAGS) $(ALPAKAFLAGS) $^ $(ROOTLIBS) $(CUTVALUEFLAG) $(PRIMITIVEFLAG) $(DOQUINTUPLET) $(ALPAKA_ROCM) $(LDFLAGS_ROCM) -o $@
+	$(CXX) $(LDFLAGS) $(EXTRAFLAGS) $(INCLUDEFLAGS) $(ALPAKAFLAGS) $^ $(ROOTLIBS) $(CUTVALUEFLAG) $(PRIMITIVEFLAG) $(DOQUINTUPLET) $(T4FLAG) $(PT4FLAG) $(ALPAKA_ROCM) $(LDFLAGS_ROCM) -o $@
 
 %_cpu.o: %.cc rooutil
-	$(CXX) $(CXXFLAGS) $(EXTRAFLAGS) $(INCLUDEFLAGS) $(ALPAKAFLAGS) $(CUTVALUEFLAG) $(PRIMITIVEFLAG) $(DOQUINTUPLET) $(ALPAKA_CPU) $< -c -o $@
+	$(CXX) $(CXXFLAGS) $(EXTRAFLAGS) $(INCLUDEFLAGS) $(ALPAKAFLAGS) $(CUTVALUEFLAG) $(PRIMITIVEFLAG) $(DOQUINTUPLET) $(T4FLAG) $(PT4FLAG) $(ALPAKA_CPU) $< -c -o $@
 %_cuda.o: %.cc rooutil
-	$(CXX) $(CXXFLAGS) $(EXTRAFLAGS) $(INCLUDEFLAGS) $(ALPAKAFLAGS) $(CUTVALUEFLAG) $(PRIMITIVEFLAG) $(DOQUINTUPLET) $(ALPAKA_CUDA) $(CUDAINCLUDE) $< -c -o $@
+	$(CXX) $(CXXFLAGS) $(EXTRAFLAGS) $(INCLUDEFLAGS) $(ALPAKAFLAGS) $(CUTVALUEFLAG) $(PRIMITIVEFLAG) $(DOQUINTUPLET) $(T4FLAG) $(PT4FLAG) $(ALPAKA_CUDA) $(CUDAINCLUDE) $< -c -o $@
 %_rocm.o: %.cc rooutil
-	$(CXX) $(CXXFLAGS) $(EXTRAFLAGS) $(INCLUDEFLAGS) $(ALPAKAFLAGS) $(CUTVALUEFLAG) $(PRIMITIVEFLAG) $(DOQUINTUPLET) $(ALPAKA_ROCM) $(ROCMINCLUDE) $< -c -o $@
+	$(CXX) $(CXXFLAGS) $(EXTRAFLAGS) $(INCLUDEFLAGS) $(ALPAKAFLAGS) $(CUTVALUEFLAG) $(PRIMITIVEFLAG) $(DOQUINTUPLET) $(T4FLAG) $(PT4FLAG) $(ALPAKA_ROCM) $(ROCMINCLUDE) $< -c -o $@
 
 rooutil:
 	$(MAKE) -C code/rooutil/
