--- a/RecoTracker/LSTCore/standalone/LST/Makefile
+++ b/RecoTracker/LSTCore/standalone/LST/Makefile
@@ -89,10 +89,10 @@ CUTVALUEFLAG =
 CUTVALUEFLAG_FLAGS = -DCUT_VALUE_DEBUG
 
 %_cpu.o: ../../src/alpaka/%.dev.cc
-	$(COMPILE_CMD_CPU) $(CXXFLAGS_CPU) $(ROOTINCLUDE) $(CUTVALUEFLAG) $(LSTWARNINGSFLAG) $(LSTSTANDALONEFLAG) $(CMSSW_WERRORS_CPU) $(T5CUTFLAGS) $(ALPAKAINCLUDE) $(ALPAKABACKEND_CPU) $< -o $@
+	$(COMPILE_CMD_CPU) $(CXXFLAGS_CPU) $(ROOTINCLUDE) $(CUTVALUEFLAG) $(LSTWARNINGSFLAG) $(LSTSTANDALONEFLAG) $(CMSSW_WERRORS_CPU) $(T5CUTFLAGS) $(T4FLAG) $(PT4FLAG) $(ALPAKAINCLUDE) $(ALPAKABACKEND_CPU) $< -o $@
 
 %_cuda.o: ../../src/alpaka/%.dev.cc
-	$(COMPILE_CMD_CUDA) $(CXXFLAGS_CUDA) $(ROOTINCLUDE) $(CUTVALUEFLAG) $(LSTWARNINGSFLAG) $(LSTSTANDALONEFLAG) $(CMSSW_WERRORS_CUDA) $(T5CUTFLAGS) $(ALPAKAINCLUDE) $(ALPAKABACKEND_CUDA) $< -o $@
+	$(COMPILE_CMD_CUDA) $(CXXFLAGS_CUDA) $(ROOTINCLUDE) $(CUTVALUEFLAG) $(LSTWARNINGSFLAG) $(LSTSTANDALONEFLAG) $(CMSSW_WERRORS_CUDA) $(T5CUTFLAGS) $(T4FLAG) $(PT4FLAG) $(ALPAKAINCLUDE) $(ALPAKABACKEND_CUDA) $< -o $@
 
 %_rocm.o: ../../src/alpaka/%.dev.cc
 	$(COMPILE_CMD_ROCM) $(CXXFLAGS_ROCM) $(ROOTINCLUDE) $(CUTVALUEFLAG) $(LSTWARNINGSFLAG) $(LSTSTANDALONEFLAG) $(CMSSW_WERRORS_ROCM) $(T5CUTFLAGS) $(ALPAKAINCLUDE) $(ALPAKABACKEND_ROCM) $< -o $@
@@ -104,16 +104,17 @@ CUTVALUEFLAG_FLAGS = -DCUT_VALUE_DEBUG
 	$(COMPILE_CMD_CUDA) $(CXXFLAGS_CUDA) $(ROOTINCLUDE) $(CUTVALUEFLAG) $(LSTWARNINGSFLAG) $(LSTSTANDALONEFLAG) $(CMSSW_WERRORS_CUDA) $(T5CUTFLAGS) $(ALPAKAINCLUDE) $(ALPAKABACKEND_CUDA) $< -o $@
 
 %_rocm.o: ../../src/alpaka/%.cc
-	$(COMPILE_CMD_ROCM) $(CXXFLAGS_ROCM) $(ROOTINCLUDE) $(CUTVALUEFLAG) $(LSTWARNINGSFLAG) $(LSTSTANDALONEFLAG) $(CMSSW_WERRORS_ROCM) $(T5CUTFLAGS) $(ALPAKAINCLUDE) $(ALPAKABACKEND_ROCM) $< -o $@
+	$(COMPILE_CMD_ROCM) $(CXXFLAGS_ROCM) $(ROOTINCLUDE) $(CUTVALUEFLAG) $(LSTWARNINGSFLAG) $(LSTSTANDALONEFLAG) $(CMSSW_WERRORS_ROCM) $(T5CUTFLAGS) $(T4FLAG) $(PT4FLAG) $(ALPAKAINCLUDE) $(ALPAKABACKEND_ROCM) $< -o $@
 
 %_cpu.o: ../../src/%.cc
-	$(COMPILE_CMD_CPU) $(CXXFLAGS_CPU) $(ROOTINCLUDE) $(CUTVALUEFLAG) $(LSTWARNINGSFLAG) $(LSTSTANDALONEFLAG) $(CMSSW_WERRORS_CPU) $(T5CUTFLAGS) $(ALPAKAINCLUDE) $(ALPAKABACKEND_CPU) $< -o $@
+	echo "T4FLAG is: [$(T4FLAG)]"
+	$(COMPILE_CMD_CPU) $(CXXFLAGS_CPU) $(ROOTINCLUDE) $(CUTVALUEFLAG) $(LSTWARNINGSFLAG) $(LSTSTANDALONEFLAG) $(CMSSW_WERRORS_CPU) $(T5CUTFLAGS) $(T4FLAG) $(PT4FLAG) $(ALPAKAINCLUDE) $(ALPAKABACKEND_CPU) $< -o $@
 
 %_cuda.o: ../../src/%.cc
-	$(COMPILE_CMD_CUDA) $(CXXFLAGS_CUDA) $(ROOTINCLUDE) $(CUTVALUEFLAG) $(LSTWARNINGSFLAG) $(LSTSTANDALONEFLAG) $(CMSSW_WERRORS_CUDA) $(T5CUTFLAGS) $(ALPAKAINCLUDE) $(ALPAKABACKEND_CUDA) $< -o $@
+	$(COMPILE_CMD_CUDA) $(CXXFLAGS_CUDA) $(ROOTINCLUDE) $(CUTVALUEFLAG) $(LSTWARNINGSFLAG) $(LSTSTANDALONEFLAG) $(CMSSW_WERRORS_CUDA) $(T5CUTFLAGS) $(T4FLAG) $(PT4FLAG) $(ALPAKAINCLUDE) $(ALPAKABACKEND_CUDA) $< -o $@
 
 %_rocm.o: ../../src/%.cc
-	$(COMPILE_CMD_ROCM) $(CXXFLAGS_ROCM) $(ROOTINCLUDE) $(CUTVALUEFLAG) $(LSTWARNINGSFLAG) $(LSTSTANDALONEFLAG) $(CMSSW_WERRORS_ROCM) $(T5CUTFLAGS) $(ALPAKAINCLUDE) $(ALPAKABACKEND_ROCM) $< -o $@
+	$(COMPILE_CMD_ROCM) $(CXXFLAGS_ROCM) $(ROOTINCLUDE) $(CUTVALUEFLAG) $(LSTWARNINGSFLAG) $(LSTSTANDALONEFLAG) $(CMSSW_WERRORS_ROCM) $(T5CUTFLAGS) $(T4FLAG) $(PT4FLAG) $(ALPAKAINCLUDE) $(ALPAKABACKEND_ROCM) $< -o $@
 
 $(LIB_CPU): $(CCOBJECTS_CPU) $(LSTOBJECTS_CPU)
 	$(LD_CPU) $(SOFLAGS_CPU) $^ -o $@
