--- a/.github/workflows/testing-selfhosted.yml
+++ b/.github/workflows/testing-selfhosted.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Clean the workspace
-        run: rm -rf ./*
+        run: rm -rf * .*
       - name: Check out PR
         uses: actions/checkout@v4
         with:
@@ -147,7 +147,7 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Clean the workspace
-        run: rm -rf ./*
+        run: rm -rf * .*
       - name: Checkout PR
         uses: actions/checkout@v4
         with:
