--- a/.github/workflows/testing-selfhosted.yml
+++ b/.github/workflows/testing-selfhosted.yml
@@ -152,6 +152,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: refs/pull/${{ github.event.issue.number }}/head
+          sparse-checkout: |
+            RecoTracker/LST
+            RecoTracker/LSTCore
       - name: Get commit SHA
         run: |
           sha=$(git rev-parse HEAD)
