--- a/RecoTracker/LSTCore/standalone/Makefile
+++ b/RecoTracker/LSTCore/standalone/Makefile
@@ -1,6 +1,7 @@
 # Simple makefile
 
 EXES := bin/lst_cpu bin/lst_cuda
+GEOMETRY_EXES := bin/lst_make_geometry
 
 SOURCES=$(wildcard code/core/*.cc)
 OBJECTS_CPU=$(SOURCES:.cc=_cpu.o)
@@ -10,7 +11,7 @@ OBJECTS=$(OBJECTS_CPU) $(OBJECTS_CUDA) $(OBJECTS_ROCM)
 
 CXX         = g++
 CXXFLAGS    = -g -O2 -Wall -fPIC -Woverloaded-virtual -Wno-unused-function -fno-var-tracking -std=c++20
-INCLUDEFLAGS= -ILST -I$(shell pwd) -Icode -Icode/core -I${ALPAKA_ROOT}/include -I/${BOOST_ROOT}/include $(shell rooutil-config --include) -I$(shell root-config --incdir) -I${TRACKLOOPERDIR}/../../../ -I${CMSSW_BASE}/src -I${FMT_ROOT}/include -I../interface/ -I../interface/alpaka/ -I../src/ -I../src/alpaka/
+INCLUDEFLAGS= -ILST -I$(shell pwd) -Icode -Icode/core -I${ALPAKA_ROOT}/include -I/${BOOST_ROOT}/include -I/${EIGEN_ROOT}/include/eigen3 $(shell rooutil-config --include) -I$(shell root-config --incdir) -I${TRACKLOOPERDIR}/../../../ -I${CMSSW_BASE}/src -I${FMT_ROOT}/include -I../interface/ -I../interface/alpaka/ -I../src/ -I../src/alpaka/
 ifdef CMSSW_RELEASE_BASE
 INCLUDEFLAGS:= ${INCLUDEFLAGS} -I${CMSSW_RELEASE_BASE}/src
 endif
@@ -31,17 +32,17 @@ CUTVALUEFLAG_FLAGS = -DCUT_VALUE_DEBUG
 PRIMITIVEFLAG =
 PRIMITIVEFLAG_FLAGS = -DPRIMITIVE_STUDY
 
-all: rooutil efficiency $(EXES)
+all: rooutil efficiency $(GEOMETRY_EXES) $(EXES)
 
 cutvalue: CUTVALUEFLAG = ${CUTVALUEFLAG_FLAGS}
-cutvalue: rooutil efficiency $(EXES)
+cutvalue: rooutil efficiency $(GEOMETRY_EXES) $(EXES)
 
 primitive: PRIMITIVEFLAG = ${PRIMITIVEFLAG_FLAGS}
-primitive: rooutil efficiency $(EXES)
+primitive: rooutil efficiency $(GEOMETRY_EXES) $(EXES)
 
 cutvalue_primitive: CUTVALUEFLAG = ${CUTVALUEFLAG_FLAGS}
 cutvalue_primitive: PRIMITIVEFLAG = ${PRIMITIVEFLAG_FLAGS}
-cutvalue_primitive: rooutil efficiency $(EXES)
+cutvalue_primitive: rooutil efficiency $(GEOMETRY_EXES) $(EXES)
 
 
 bin/lst_cpu: LSTLIB=-llst_cpu
@@ -60,6 +61,11 @@ bin/lst_rocm: bin/lst_rocm.o $(OBJECTS_ROCM)
 	$(CXX) $(CXXFLAGS) $(EXTRAFLAGS) $(INCLUDEFLAGS) $(ALPAKAFLAGS) $(CUTVALUEFLAG) $(PRIMITIVEFLAG) $(DOQUINTUPLET) $(ALPAKA_CUDA) $(CUDAINCLUDE) $< -c -o $@
 %_rocm.o: %.cc rooutil
 	$(CXX) $(CXXFLAGS) $(EXTRAFLAGS) $(INCLUDEFLAGS) $(ALPAKAFLAGS) $(CUTVALUEFLAG) $(PRIMITIVEFLAG) $(DOQUINTUPLET) $(ALPAKA_ROCM) $(ROCMINCLUDE) $< -c -o $@
+
+bin/lst_make_geometry: bin/lst_make_geometry.o
+	$(CXX) $(LDFLAGS) $(EXTRAFLAGS) $(INCLUDEFLAGS) $(ALPAKAFLAGS) $^ -o $@
+%_geometry.o: %_geometry.cc
+	$(CXX) $(CXXFLAGS) $(INCLUDEFLAGS) $< -c -o $@
 
 rooutil:
 	$(MAKE) -C code/rooutil/
