--- a/.github/workflows/testing-selfhosted.yml
+++ b/.github/workflows/testing-selfhosted.yml
@@ -5,7 +5,7 @@ on:
     types: [created]
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.issue.number }}-${{ contains(github.event.comment.body, '/run gpu-standalone') || contains(github.event.comment.body, '/run all') }}-${{ contains(github.event.comment.body, '/run gpu-cmssw') || contains(github.event.comment.body, '/run gpu-all') }}-${{ contains(github.event.comment.body, 'lowpt') }}
+  group: ${{ github.workflow }}-${{ github.event.issue.number }}-${{ contains(github.event.comment.body, '/run gpu-standalone') || contains(github.event.comment.body, '/run gpu-all') }}-${{ contains(github.event.comment.body, '/run gpu-cmssw') || contains(github.event.comment.body, '/run gpu-all') }}-${{ contains(github.event.comment.body, 'lowpt') }}
   cancel-in-progress: true
 
 permissions:
