--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -23,7 +23,7 @@ permissions:
 jobs:
   checks:
     name: Run checks on PR \#${{ inputs.pr-number }}
-    using: SegmentLinking/TrackLooper-actions/.github/workflows/checks.yml@use_reusable_workflows
+    uses: SegmentLinking/TrackLooper-actions/.github/workflows/checks.yml@use_reusable_workflows
     with:
       pr-number: ${{ inputs.pr-number }}
       required-prs: ${{ inputs.required-prs }}
