Pass secrets manually

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -27,4 +27,6 @@ jobs:
     with:
       pr-number: ${{ inputs.pr-number }}
       required-prs: ${{ inputs.required-prs }}
-    secrets: inherit
+    secrets:
+      app-id: ${{ secrets.APP_ID }}
+      app-private-key: ${{ secrets.APP_PRIVATE_KEY }}
