Add other input back

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -6,6 +6,10 @@ on:
       pr-number:
         description: PR number
         required: true
+        type: number
+      required-prs:
+        description: Comma-separated list of required PR numbers that must be merged before checks are run
+        required: false
         type: string
 
 concurrency:
@@ -21,3 +25,4 @@ jobs:
     uses: SegmentLinking/TrackLooper-actions/.github/workflows/checks.yml@use_reusable_workflows
     with:
       pr-number: ${{ inputs.pr-number }}
+      required-prs: ${{ inputs.required-prs }}
