Added secrets back

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -26,3 +26,6 @@ jobs:
     with:
       pr-number: ${{ inputs.pr-number }}
       required-prs: ${{ inputs.required-prs }}
+    secrets:
+      app-id: ${{ secrets.APP_ID }}
+      app-private-key: ${{ secrets.APP_PRIVATE_KEY }}
