--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -22,6 +22,7 @@ permissions:
 
 jobs:
   checks:
+    name: Run checks for PR \#${{ inputs.pr-number }}
     uses: SegmentLinking/TrackLooper-actions/.github/workflows/checks.yml@use_reusable_workflows
     with:
       pr-number: ${{ inputs.pr-number }}
