--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -22,7 +22,7 @@ permissions:
 
 jobs:
   checks:
-    name: Run checks for PR \#${{ inputs.pr-number }}
+    name: SCRAM Checks
     uses: SegmentLinking/TrackLooper-actions/.github/workflows/checks.yml@use_reusable_workflows
     with:
       pr-number: ${{ inputs.pr-number }}
