--- a/.github/workflows/cmssw.yml
+++ b/.github/workflows/cmssw.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       pr-number:
-        description: PR number
+        description: PR number (if 0, use master and skip comparisons)
         required: true
         type: number
       required-prs:
