--- a/.github/workflows/cmssw.yml
+++ b/.github/workflows/cmssw.yml
@@ -18,7 +18,7 @@ on:
         options:
           - ubuntu-latest
           - self-hosted
-      lowpt:
+      low-pt:
         description: Run the low pT setup
         required: false
         type: boolean
@@ -39,7 +39,7 @@ jobs:
       pr-number: ${{ inputs.pr-number }}
       required-prs: ${{ inputs.required-prs }}
       runs-on: ${{ inputs.runs-on }}
-      lowpt: ${{ inputs.lowpt }}
+      low-pt: ${{ inputs.low-pt }}
     secrets:
       app-id: ${{ secrets.APP_ID }}
       app-private-key: ${{ secrets.APP_PRIVATE_KEY }}
