--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,8 +64,8 @@ jobs:
         run: |
           KNOWN_WORKFLOWS="all,checks,standalone,cmssw"
           KNOWN_MODIFIERS="lowpt,gpu"
-          python -c "kw = '${KNOWN_WORKFLOWS}'.split(','); assert all(w in kw for w in '${env.workflows}'.split(','))"
-          python -c "km = '${KNOWN_MODIFIERS}'.split(','); assert all(m in km for m in '${env.modifiers}'.split(','))"
+          python -c "kw = '${KNOWN_WORKFLOWS}'.split(','); assert all(w in kw for w in '${{ env.workflows} }'.split(','))"
+          python -c "km = '${KNOWN_MODIFIERS}'.split(','); assert all(m in km for m in '${{ env.modifiers }}'.split(','))"
       # - name: Start workflows
       #   run: |
       - name: Leave thumbs up if everything went well
@@ -79,4 +79,17 @@ jobs:
               repo,
               comment_id,
               content: "+1",
+            });
+      - name: Leave thumbs down if something went wrong
+        if: failure()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { owner, repo } = context.repo;
+            const comment_id = context.payload.comment.id;
+            await github.rest.reactions.createForIssueComment({
+              owner,
+              repo,
+              comment_id,
+              content: "-1",
             });
