--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,13 @@ jobs:
           fi
           echo "RELEASE: $RELEASE"
           echo "release=$RELEASE" >> $GITHUB_ENV
+          PACKAGES=$(echo "$COMMENT_BODY" | yq -M ".packages | @csv")
+          # Set to empty if null
+          if [[ -z "$PACKAGES" || "$PACKAGES" == "null" ]]; then
+            PACKAGES=""
+          fi
+          echo "PACKAGES: $PACKAGES"
+          echo "packages=$PACKAGES" >> $GITHUB_ENV
       - name: Check validity
         run: |
           KNOWN_WORKFLOWS="all,checks,standalone,cmssw"
@@ -84,7 +91,8 @@ jobs:
               ref: 'CI_branch_devel',
               inputs: {
                 'pr-number': '${{ github.event.issue.number }}',
-                'required-prs': '${{ env.required-prs }}'
+                'required-prs': '${{ env.required-prs }}',
+                'packages': '${{ env.packages }}'
               }
             });
       - name: Start standalone tests
@@ -103,7 +111,8 @@ jobs:
                 'required-prs': '${{ env.required-prs }}',
                 'runs-on': '${{ contains(env.modifiers, 'gpu') && 'self-hosted' || 'ubuntu-latest' }}',
                 'low-pt': '${{ contains(env.modifiers, 'lowpt') && 'true' || 'false' }}',
-                'release': '${{ env.release }}'
+                'release': '${{ env.release }}',
+                'packages': '${{ env.packages }}'
               }
             });
       - name: Start CMSSW tests
@@ -122,7 +131,8 @@ jobs:
                 'required-prs': '${{ env.required-prs }}',
                 'runs-on': '${{ contains(env.modifiers, 'gpu') && 'self-hosted' || 'ubuntu-latest' }}',
                 'low-pt': '${{ contains(env.modifiers, 'lowpt') && 'true' || 'false' }}',
-                'release': '${{ env.release }}'
+                'release': '${{ env.release }}',
+                'packages': '${{ env.packages }}'
               }
             });
       - name: Leave thumbs up if everything went well
