--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -15,6 +15,10 @@ on:
         description: Comma-separated list of extra packages to add
         required: false
         type: string
+      ci-devel:
+        description: Use the development CI setup
+        required: false
+        type: boolean
 
 concurrency:
   group: ${{ github.workflow }}-${{ inputs.pr-number }}-${{ inputs.required-prs }}
@@ -27,7 +31,7 @@ permissions:
 jobs:
   checks:
     name: SCRAM Checks
-    uses: SegmentLinking/TrackLooper-actions/.github/workflows/checks.yml@use_reusable_workflows
+    uses: SegmentLinking/TrackLooper-actions/.github/workflows/checks.yml@${{ inputs.ci-devel && 'devel' || 'use_reusable_workflows' }}
     with:
       pr-number: ${{ inputs.pr-number }}
       required-prs: ${{ inputs.required-prs }}
