--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
               owner,
               repo,
               workflow_id: 'checks.yml',
-              ref: ${{ contains(env.modifiers, 'ci_devel') && 'CI_branch_devel2' || 'CI_branch_devel' }},
+              ref: '${{ contains(env.modifiers, 'ci_devel') && 'CI_branch_devel2' || 'CI_branch_devel' }}',
               inputs: {
                 'pr-number': '${{ github.event.issue.number }}',
                 'required-prs': '${{ env.required-prs }}',
@@ -105,7 +105,7 @@ jobs:
               owner,
               repo,
               workflow_id: 'standalone.yml',
-              ref: ${{ contains(env.modifiers, 'ci_devel') && 'CI_branch_devel2' || 'CI_branch_devel' }},
+              ref: '${{ contains(env.modifiers, 'ci_devel') && 'CI_branch_devel2' || 'CI_branch_devel' }}',
               inputs: {
                 'pr-number': '${{ github.event.issue.number }}',
                 'required-prs': '${{ env.required-prs }}',
@@ -125,7 +125,7 @@ jobs:
               owner,
               repo,
               workflow_id: 'cmssw.yml',
-              ref: ${{ contains(env.modifiers, 'ci_devel') && 'CI_branch_devel2' || 'CI_branch_devel' }},
+              ref: '${{ contains(env.modifiers, 'ci_devel') && 'CI_branch_devel2' || 'CI_branch_devel' }}',
               inputs: {
                 'pr-number': '${{ github.event.issue.number }}',
                 'required-prs': '${{ env.required-prs }}',
