--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -27,7 +27,7 @@ permissions:
 jobs:
   checks:
     name: SCRAM Checks
-    uses: SegmentLinking/TrackLooper-actions/.github/workflows/checks.yml@$use_reusable_workflows
+    uses: SegmentLinking/TrackLooper-actions/.github/workflows/checks.yml@use_reusable_workflows
     with:
       pr-number: ${{ inputs.pr-number }}
       required-prs: ${{ inputs.required-prs }}
