--- a/.github/workflows/standalone.yml
+++ b/.github/workflows/standalone.yml
@@ -42,7 +42,7 @@ permissions:
 jobs:
   test:
     name: Standalone Testing
-    uses: SegmentLinking/TrackLooper-actions/.github/workflows/standalone.yml@use_reusable_workflows
+    uses: SegmentLinking/TrackLooper-actions/.github/workflows/standalone.yml@main
     with:
       pr-number: ${{ inputs.pr-number }}
       required-prs: ${{ inputs.required-prs }}
